syntax = "proto3";

message ImageData {
    bytes image = 1;
}